css/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}


body {
    font-family: sans-serif;
}


.background {
    padding-top: 50px;
    height: 100vh;
    background-image: linear-gradient(to bottom,
    #009688 0%,
    #009688 15%,
    #dddbd1 15%,
        #d2dbdc 100%);
    }
    
    .main-container {
    width: 80%;
    height: 850px;
    background-color: white;
    margin: auto;
    display: flex;
    flex-flow: row nowrap;
}

.main-container .nav-left {
    width: 30%;
    height: 100%;
    display: flex;
    flex-flow: column;
}

.main-container .nav-right {
    background-color: darkgreen;
    width: 70%;
    height: 100%;
}

.main-container .nav-left .user-profile {
    width: 100%;
    height: 70px;
    background-color: #eaeaea;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.main-container .nav-left .user-profile .profile-pic-container {
    width: 80%;
    height: 80%;
    padding-left: 10px;
    display: flex;
    align-items: center;
}

.firstImage{
    max-height: 100%;
}

.firstImage img {
    max-height: 100%;
}

.main-container .nav-left .user-profile .profile-pic-container span {
    padding-left: 5px;
    font-weight: bold;
}

.main-container .nav-left .user-profile .profile-pic-container img {
    max-width: 100%;
    max-height: 100%;
    border-radius: 50%;
}

.main-container .nav-left .user-profile .profile-option {
    display: flex;
    gap: 20px;
    padding-right: 10px;
    color: #b1b1b1;
    font-size: 1.3em;
}

.main-container .nav-left .notification-section {
    height: 80px;
    width: 100%;
    background-color: #8edafc;
    display: flex;
    align-items: center;
    padding-left: 10px;
    gap: 20px;
}

.main-container .nav-left .notification-section i {
    background-color: white;
    padding: 10px 7px;
    border-radius: 50%;
    color: #8edafc;
    font-size: 1.3em;
}

.main-container .nav-left .notification-section .info-notification {
    display: flex;
    flex-direction: column;
}

.main-container .nav-left .notification-section .info-notification span {
    font-weight: bold;
}

.main-container .nav-left .notification-section .info-notification a {
    font-size: 0.9em;
    color: gray;
}

.main-container .nav-left .search-bar {
    width: 100%;
    height: 50px;
    background-color: #fafafa;
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
    
}

.main-container .nav-left .search-bar i {
    font-size: 0.8em;
    position: absolute;
    left: 25px;
    z-index: 2;
}

.main-container .nav-left .search-bar input{
    width: 90%;
    height: 70%;
    background-color: white;
    padding-left: 25px;
}

.main-container .nav-left .contact-container {
    height: 100%;
    width: 100%;
    overflow: auto;
}

.main-container .nav-left .contact-container .contact {
    color: black;
    height: 70px;
    width: 100%;
    display: flex;
    background-color: white;
    border-bottom: 1px solid rgba(128, 128, 128, 0.178);
    justify-content: space-between;
}

.main-container .nav-left .contact-container .contact.active {
    background-color: #e9ebeb;
}

.main-container .nav-left .contact-container .contact:hover {
    background-color: lightgray;
    cursor: pointer;
}

.main-container .nav-left .contact-container .contact .contact-name-info {
    display: flex;
}

.main-container .nav-left .contact-container .contact:last-child{
    border: 0;
}

.main-container .nav-left .contact-container .contact .img-container {
    height: 100%;
    display: flex;
    align-items: center;
    padding-left: 10px;
}

.main-container .nav-left .contact-container .contact .contact-info {
    display: flex;
    flex-direction: column;
    padding-left: 10px;
    padding-top: 5px;
}

.main-container .nav-left .contact-container .contact .contact-info .contact-name{
    font-weight: 600;
    font-size: 0.9em;
}

.main-container .nav-left .contact-container .contact .contact-info .last-message{
    font-size: 0.7em;
    color: gray;
    overflow: hidden;
    max-height: 20px ;
}

.main-container .nav-left .contact-container .contact .hour-last-message {
    font-size: 0.8em;
    color: gray;
    padding-right: 20px;
}

.main-container .nav-left .contact-container .contact img {
    height: 80%;
    border-radius: 50%;
}

.header-chat {
    display: flex;
    justify-content: space-between;
    width: 100%;
    height: 70px;
    background-color: #eaeaea;
    border-left: 1px solid rgba(128, 128, 128, 0.623);
    align-items: center;
    position: relative;
}

.header-chat .header-right {
    display: flex;
    font-size: 1.3em;
    gap: 20px;
    padding-right: 20px;
    color: gray;
}

.header-chat .header-right .fa-ellipsis-vertical{
    cursor: pointer;
}

.header-chat .header-right .main-chat-hidden-menu{
    display: flex;
    flex-direction: column;
    font-size: 15px;
    border: 1px solid gray;
    position: absolute;
    z-index: 5;
    right: 5px;
    top:60px;
    width: 100px;
    border-radius: 10px;
}

.header-chat .header-right .main-chat-hidden-menu button {
    padding: 10px;
    font-family: sans-serif;
    border: 0;
    background-color: #eaeaea;
}

.header-chat .header-right .main-chat-hidden-menu button:first-child {
    border-bottom: 1px solid gray;
    border-radius: 10px 10px 0px 0px;
}

.header-chat .header-right .main-chat-hidden-menu button:last-child {
    border-bottom: 1px solid gray;
    border-radius: 0px 0px 10px 10px;
}

.header-chat .header-right .main-chat-hidden-menu button:hover {
    background-color: rgb(184, 184, 184);
}

.nav-right .header-left{
    display: flex;
    height: 100%;
}

.nav-right .header-chat .img-container {
    height: 100%;
    padding-left: 10px;
    align-items: center;
    display: flex;
}


.nav-right .header-chat .img-container img {
    height: 80%;
    border-radius: 50%;
}

.nav-right .header-chat .contact-info {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.nav-right .header-chat .contact-info .last-seen {
    font-size: 0.8em;
    color: grey;
}

.nav-right {
    background-image: url(../img/mine.jpg);
}

.nav-right .main-chat{
    height: calc(100% - 140px);
    overflow: auto;
}

.nav-right .bottom-chat {
    background-color: #eee9e5;
    width: 100%;
    height: 70px;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.nav-right .bottom-chat .fa-paper-plane{
    cursor: pointer;
}

.nav-right .bottom-chat input {
    width: 80%;
    height: 70%;
    border: 1px solid rgba(128, 128, 128, 0.295);
    border-radius: 10px;
    padding: 10px;
}

.nav-right .bottom-chat i:first-child,
.nav-right .bottom-chat i:last-child {
    font-size: 1.5em;
    color: gray;
}

.nav-right .main-chat {
    display: flex;
    padding: 30px 20px;
    gap: 20px;
    flex-direction: column;
    align-items: start;
}

.nav-right .income,
.nav-right .send {
    padding: 12px;
    border-radius: 10px;
    position: relative;
    padding-right: 20px;
    overflow-wrap: break-word;
}

.nav-right .income:hover .menu-open,
.nav-right .send:hover .menu-open{
    display: block;
}

.nav-right .income {
    background-color: white;
    display: flex;
    justify-content: space-between;
}

.nav-right .send {
    background-color: #d5f9ba;
    display: flex;
    justify-content: space-between;
    align-self: flex-end;
}

.nav-right .send .hour-of-message,
.nav-right .income .hour-of-message {
    font-size: 10px;
    color: gray;
    position: absolute;
    right: 5px;
    bottom: 2px;
}

.nav-right .main-chat .hidden-menu {
    background-color: white;
    position: absolute;
    width: 150px;
    border: 1px solid #b1b1b1;
    z-index: 4;
    right: 0px;
    top: 20px;
}

.nav-right .main-chat .hidden-menu .delete-message,
.nav-right .main-chat .hidden-menu .info-message{
    background-color: white;
    width: 100%;
    padding: 15px;
    font-size: 0.7em;
    border: 0;
}

.nav-right .main-chat .hidden-menu .delete-message:hover,
.nav-right .main-chat .hidden-menu .info-message:hover{
    background-color: darkgray;
}

.menu-open {
    position: absolute;
    right: 2px;
    top: 2px;
    cursor: pointer;
    font-size: 10px;
    display: none;
}

.fa-message{
    cursor: pointer;
}

.display-none {
    display: none;
}

.display-block {
    display: block;
}

.nav-right .main-chat .receivedMessage {
    right: -132px;
}

.fa-circle-notch {
    cursor: pointer;
}

/* darkmode section */

.dark .main-container .nav-left {
    background-color: rgb(10, 8, 43);
}

.dark .main-container .nav-left .user-profile{
    background-color: rgb(10, 8, 43);
    color: white;
}

.dark .main-container .nav-left .search-bar {
    color: white;
    background-color: rgb(10, 8, 43);
}

.dark .main-container .nav-left .contact {
    color: white;
    background-color: rgb(10, 8, 43);
}

.dark .main-container .nav-left .contact:hover {
    background-color: #062c28;
}

.dark .main-container .nav-left .contact.active {
    background-color: #044741;
}

.dark .nav-right .header-chat {
    background-color: rgb(10, 8, 43);
    color: white;
}

.dark .nav-right .main-chat {
    background-image: url(../img/backgrounddark.jpg);
}

.dark .nav-right .bottom-chat {
    background-color: rgb(10, 8, 43);
}

.dark .nav-right .bottom-chat input {
    background-color: rgb(10, 8, 43);
}
/* darkmode section */

